Boopblr - 3.6.0
  * Made logging simpler
  * Fixed the endless queue bug
  * Merged the two config files into one.