@@ -11,14 +11,13 @@ import org.apache.http.conn.ssl.NoopHostnameVerifier;
 import org.apache.http.impl.client.HttpClients;
 import org.apache.http.message.BasicNameValuePair;
 
-import me.boops.cache.Cache;
 import me.boops.cache.Config;
 import oauth.signpost.OAuthConsumer;
 import oauth.signpost.commonshttp.CommonsHttpOAuthConsumer;
 
 public class APIQueuePost {
 
-	public APIQueuePost(Long id, String key) throws Exception {
+	public APIQueuePost(Long id, String key, String tags) throws Exception {
 		
 		//Define needed classes
 		Config Conf = new Config();
@@ -39,7 +38,7 @@ public class APIQueuePost {
 		urlParameters.add(new BasicNameValuePair("id", id.toString()));
 		urlParameters.add(new BasicNameValuePair("reblog_key", key));
 		urlParameters.add(new BasicNameValuePair("state", "queue"));
-		urlParameters.add(new BasicNameValuePair("tags", Cache.gend_tags));
+		urlParameters.add(new BasicNameValuePair("tags", tags));
 		post_meth.setEntity(new UrlEncodedFormEntity(urlParameters));
 
 		// Send The Request
