@@ -3,7 +3,6 @@ package me.boops.functions.queuecheck;
 import org.json.JSONArray;
 import org.json.JSONObject;
 
-import me.boops.cache.Cache;
 import me.boops.crypto.MD5Sum;
 import me.boops.functions.api.APIGetPost;
 import me.boops.functions.api.APIQueueCount;
@@ -24,8 +23,8 @@ public class QueueCheckText {
 		APIQueue.Count();
 
 		// Hash The Text Post
-		new APIGetPost(id, blog_name);
-		String post_hash = new MD5Sum().hash(Cache.get_post_post.getJSONArray("posts").getJSONObject(0)
+		APIGetPost GetPost = new APIGetPost(id, blog_name);
+		String post_hash = new MD5Sum().hash(GetPost.getPost().getJSONArray("posts").getJSONObject(0)
 				.getJSONObject("reblog").get("tree_html").toString());
 
 		// Scan The Posts In Queue
